# ChangeLog for app-editors/emacs-cvs
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  28 Nov 2008; Ulrich Mueller <ulm@gentoo.org> emacs-cvs-23.0.9999.ebuild:
  Simplify code for site file creation.

  27 Nov 2008; Ulrich Mueller <ulm@gentoo.org> emacs-cvs-23.0.9999.ebuild:
  Add site initialisation for Info, so that Emacs' own Info dir is always
  first in the list. This also helps to get the right documentation if Emacs
  is explicitely started as emacs-${SLOT}. Move site-init file from 10 to 20
  since emacs-daemon should be first.

  26 Nov 2008; Ulrich Mueller <ulm@gentoo.org> emacs-cvs-23.0.9999.ebuild:
  Handle the FEATURES=noinfo case in emacs-infodir-rebuild; don't create a
  spurious Info dir file when called with no files in postrm phase.

  19 Nov 2008; Ulrich Mueller <ulm@gentoo.org> emacs-cvs-23.0.9999.ebuild:
  Upstream relicenced the documentation under FDL-1.3.

  17 Nov 2008; Ulrich Mueller <ulm@gentoo.org> emacs-cvs-23.0.9999.ebuild:
  Remove RELAX-NG licence, following upstream.

  08 Nov 2008; Ulrich Mueller <ulm@gentoo.org> emacs-cvs-23.0.9999.ebuild:
  We need "as-is W3C RELAX-NG" in LICENSE, see etc/schema/README.

  07 Nov 2008; Ulrich Mueller <ulm@gentoo.org> emacs-cvs-23.0.9999.ebuild:
  Sync from Portage.

  05 Nov 2008; Ulrich Mueller <ulm@gentoo.org> emacs-cvs-23.0.9999.ebuild:
  Convert to EAPI 2.

*emacs-cvs-23.0.9999 (29 Oct 2008)

  29 Oct 2008; Ulrich Mueller <ulm@gentoo.org>
  +files/emacs-cvs-freebsd-sparc-1.patch, +emacs-cvs-23.0.9999.ebuild,
  metadata.xml:
  Copied from Portage tree.
