@@ -1,4 +1,4 @@
 AUX emacs-cvs-freebsd-sparc-1.patch 448 RMD160 4f131b630ec09e1d9170374fc60a1620f0f718e9 SHA1 5bc71be91bb8008cec2473479184e250e5284c68 SHA256 e2c2e53e2995d4a505c480d17e0a7e5abff61ea96c4d3451a1e019c985a59cd8
-EBUILD emacs-cvs-23.0.9999.ebuild 8768 RMD160 fef0f5166f207b05e2554d7c32eecf737aca5ff1 SHA1 d36b5aae9a590102a8823fc460c310279fc218c4 SHA256 663b489e1b335358b0efe7384d0325e73836a3fa5c42764cfdbb005f92411008
-MISC ChangeLog 1588 RMD160 cb71da96ba79e439fee5db2fc89be1f4c9e65fd7 SHA1 06fc1cdd168b8e87a85146b5dd15536ed3a240ba SHA256 c9876e503b82f5d8b1967283b788a3c1d8b47766c7dbec8ace5950699186b839
+EBUILD emacs-cvs-23.0.9999.ebuild 8783 RMD160 903894cedba087405f0d7def086573cc0f42311d SHA1 12b832664014a30a7ec2e251bb592baecaba3dcb SHA256 1edac64d325a96654c8888003b0856bb816181f2514b3da6323dcf77c9b53ae0
+MISC ChangeLog 1698 RMD160 d711ef57ea27508ccfc22b1f74c2b82705198dbb SHA1 15df6df9565137af4891e08145e0d386c766167c SHA256 d292bdb9999690e6d9d0d5ac0261c6aba18fce58982ce3ac12ec23028b4efefd
 MISC metadata.xml 1606 RMD160 f898da13dfc3bdb1636e9ff7bc241997d235498b SHA1 2dea9901bc80a1d91f38628707395d9b4ef0df70 SHA256 f4df95b7db6f7b3375bdd658024520a03a763e75f4ca846ab494609f6094c9bd
